[package]
name = "pti-randomizer"
version = "2.0.0"
edition = "2021"
description = "Creates a list of PTI Elements for you to use in your maps (if you're brave enough.)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = [ "derive" ] }
rand = "0.8.5"
